--- a/BackEnd/requirements.txt
+++ b/BackEnd/requirements.txt
@@ -1,22 +1,33 @@
+awsebcli==3.7.3
+backports.ssl-match-hostname==3.5.0.1
+blessed==1.9.5
+botocore==1.3.24
+cement==2.4.0
+colorama==0.3.3
+docker-py==1.1.0
+dockerpty==0.3.4
+docopt==0.6.2
+docutils==0.12
 Flask==0.10.1
 Flask-Cors==2.1.2
-Flask-Mail==0.9.1
 Flask-Passlib==0.1
-Jinja2==2.8
-MarkupSafe==0.23
-Werkzeug==0.11.5
-argparse==1.2.1
-blinker==1.4
-future==0.15.2
 itsdangerous==0.24
 jdcal==1.2
+Jinja2==2.8
+jmespath==0.9.0
+MarkupSafe==0.23
 openpyxl==2.2.2
 passlib==1.6.1
+pathspec==0.3.3
+pkg-resources==0.0.0
 pyexcel-io==0.1.0
-pyexcel-xls==0.1.0
 pyexcel-xlsx==0.1.0
-pymongo==3.2.2
+pymongo==3.2
+python-dateutil==2.4.2
+PyYAML==3.11
+requests==2.6.2
 six==1.10.0
-wsgiref==0.1.2
-xlrd==0.9.4
-xlwt-future==0.8.0
+texttable==0.8.4
+wcwidth==0.1.6
+websocket-client==0.35.0
+Werkzeug==0.11.3
